# codecrafters-http-server-rust

./: Cargo.toml  GH_INSTALLATION.md  README.md  clippy.toml  rustfmt.toml
scripts/: test_server.sh
src/: main.rs
src/body/: mod.rs  test.rs
src/connection/: mod.rs  tests.rs
src/consts/: mod.rs
src/file/: mod.rs
src/header/: mod.rs  tests.rs
src/http/: method.rs  mod.rs  status.rs  tests.rs
src/request/: mod.rs  tests.rs
src/response/: mod.rs  tests.rs
src/router/: mod.rs
src/server/: mod.rs  tests.rs
